# nano-bat

./: .gitmodules  README.md  bom-generator.py
firmware/: Cargo.toml  bmp.gdb  memory.x
firmware/.cargo/: config
firmware/src/: main.rs
hardware/board/lib/: nano-bat.lib
hardware/board/lib/footprints.pretty/: CUI_PJ-202B.kicad_mod  MIC2104YML-TR.kicad_mod  SM6227.kicad_mod  USB-MICRO-B-HIROSE-UX60-MB-5S8.kicad_mod
hardware/board/nano-bat/: controller.sch  coulomb-counter.sch  lcd-display.sch  nano-bat-cache.lib  nano-bat.kicad_pcb  nano-bat.pro  nano-bat.sch  power.sch  sym-lib-table  tft-display.sch
hardware/board/nano-bat/lib/: nano-bat.dcm  nano-bat.lib
hardware/board/nano-bat/lib/footprints.pretty/: CUI_PJ-202B.kicad_mod  LTC4150CMS-PBF.kicad_mod  NRS6028-IND-NS.kicad_mod  SW_B3FS-1010P.kicad_mod  USB-MICRO-B-HIROSE-UX60-MB-5S8.kicad_mod  vertigo-designs-logo.kicad_mod
hardware/board/nano-bat/lib/footprints.pretty/3dmodels/: 0ZCG.step  0ZCM.step  10033526-n3212mlfc.stp  FH12S-45S-0.5SH.stp  POWERPAK 1212-8.step  SM6227_stp.stp
