[package]
authors = ["ryan"]
edition = "2018"
readme = "README.md"
name = "firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.cortex-m-rt]
version = "0.6.10"

[dependencies.stm32l4xx-hal]
version = "0.5.0"
features = ["stm32l4x2", "rt"]

[dependencies.stm32l4]
version = "0.10.0"
features = ["stm32l4x2"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
